--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^0.1.0
   english_words: ^3.1.0
   intl: ^0.15.6
+  location: ^1.2.0
 
 dev_dependencies:
   flutter_test:
